docs/v7.1/classes/E93.md
---
layout: page
title: E93 Présence
titleEn: E93 Presence - Présence
permalink: /v7.1/classes/E93
sidebar: v71
group: classes
date: 2023-05-25
description: Le CIDOC CRM est le standard qu’utilisent de nombreuses organisations pour l’échange et l’intégration de jeux de données et de spécifications patrimoniales. Il est développé et maintenu à jour exclusivement en anglais par le CRM SIG, un sous-groupe du Conseil international des musées (ICOM). Ceci est une traduction officielle en français développée par la Traduction en français du CIDOC CRM, une initiative qui offre une version française à jour et accessible ouvertement et gratuitement du standard CIDOC CRM et en démocratise l'usage dans la communauté patrimoniale francophone. ------------ The CIDOC CRM is the standard used by many heritage organizations for the exchange and integration of museum collection datasets and specifications. It is developed and maintained exclusively in English by the CRM SIG, a subgroup of the International Council of Museums (ICOM). This is an official translation developed by the Traduction en français du CIDOC CRM, an initiative offering an open, up-to-date, and free French version of the CIDOC CRM standard, and democratizing its use in the francophone heritage community.
---

**Date de création** : 2020-05-03

**Dernière mise à jour** : 2023-05-25

<div class="lang-buttons">
 <button id="fr" class="activate">FR</button>
 <button id="en-fr">EN-FR</button>
</div>

<table>
<tbody>
<tr>
<td><strong>Sous-classe de</strong></td>
<td class="en">
<p>E92 Spacetime Volume</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">E92</code><code class="language-plaintext highlighter-rouge">_Volume_spatio-temporel</code></p>
</td>
</tr>
<tr>
<td><strong>Super-classe de</strong></td>
<td class="en">
</td>
<td>
</td>
</tr>
<tr>
<td><strong>Note d’application</strong></td>
<td class="en">
<p>This class comprises instances of E92 Spacetime Volume, whose temporal extent has been chosen in order to determine the spatial extent of a phenomenon over the chosen time-span. Respective phenomena may, for instance, be historical events or periods, but can also be the diachronic extent and existence of physical things. In other words, instances of this class fix a slice of another instance of E92 Spacetime Volume in time. </p>
<p>The temporal extent of an instance of E93 Presence typically is predetermined by the researcher so as to focus the investigation particularly on finding the spatial extent of the phenomenon by testing for its characteristic features. There are at least two basic directions such investigations might take. The investigation may wish to determine where something was during some time or it may wish to reconstruct the total passage of a phenomenon’s spacetime volume through an examination of discrete presences. Observation and measurement of features indicating the presence or absence of a phenomenon in some space allows for the progressive approximation of spatial extents through argumentation typically based on inclusion, exclusion and various overlaps.</p>
</td>
<td>
<p>Cette classe comprend les instances de <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code> dont l'étendue temporelle a été choisie pour déterminer l'étendue spatiale d'un phénomène au cours d'un intervalle de temps choisi. Les phénomènes concernés peuvent, par exemple, être des évènements ou des périodes historiques, mais peuvent aussi être l'étendue et l'existence diachroniques de choses physiques. En d'autres termes, les instances de cette classe fixent une autre tranche d'une instance de <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code> dans le temps.</p>
<p>L'étendue temporelle d'une instance de <code class="language-plaintext highlighter-rouge">E93_Présence</code> est généralement prédéterminée par le ou la chercheur·se afin de concentrer son enquête sur la recherche de l'étendue spatiale du phénomène en testant ses caractéristiques. Il y a au moins deux directions de base que de telles enquêtes peuvent prendre. Elles peuvent servir à déterminer où se trouvait quelque chose pendant un certain temps ou à reconstruire le passage total du volume spatio-temporel d’un phénomène à travers un examen de présences distinctes. L'observation et le mesurage des caractéristiques indiquant la présence ou l'absence d'un phénomène dans un espace donné permettent l'approximation progressive des étendues spatiales à travers une argumentation généralement basée sur l'inclusion, l'exclusion et divers chevauchements.</p>
</td>
</tr>
<tr>
<td><strong>Exemples</strong></td>
<td class="en">
<ul>
<li><p>The Roman Empire on 19 August AD 14</p>
</li>
<li><p>Johann Joachim Winkelmann’s whereabouts in December 1775</p>
</li>
<li><p>Johann Joachim Winkelmann’s whereabouts from November 19 1755 until April 9 1768</p>
</li>
</ul>
</td>
<td>
<ul>
<li><p>L'Empire romain le 19 août 14 EC</p>
</li>
<li><p>La localisation de Johann Joachim Winckelmann en décembre 1775</p>
</li>
<li><p>La localisation de Johann Joachim Winckelmann entre le 19 novembre 1755 et le 9 avril 1768</p>
</li>
</ul>
</td>
</tr>
<tr>
<td><strong>Logique</strong></td>
<td class="en">
<p>E93(x) ⇒ E92(x)</p>
</td>
<td>
<p>E93(x) ⇒ E92(x)</p>
</td>
</tr>
<tr>
<td><strong>Propriétés</strong></td>
<td class="en">
<p>P164 is temporally specified by (temporally specifies): E52 Time Span</p>
<p>P166 was a presence of (had presence): E92 Space Time Volume</p>
<p>P167 was within (includes): E53 Place</p>
</td>
<td>
<p><code class="language-plaintext highlighter-rouge">P164_est_temporellement_spécifié_par (spécifie temporellement)</code> : <code class="language-plaintext highlighter-rouge">E52_Intervalle_temporerealml</code></p>
<p><code class="language-plaintext highlighter-rouge">P166_a_été_une_présence_de (a_eu_pour_présence)</code> : <code class="language-plaintext highlighter-rouge">E92_Volume_spatio-temporel</code></p>
<p><code class="language-plaintext highlighter-rouge">P167_s'inscrivait_dans (comporte)</code> : <code class="language-plaintext highlighter-rouge">E53_Lieu</code></p>
</td>
</tr>
<tr>
<td><strong><em>Note de traduction</em></strong></td>
<td colspan="2">
</td>
</tr>
<tr>
<td><strong><em>Références</em></strong></td>
<td colspan="2">
</td>
</tr>
</tbody>
</table>
